--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"dev": "tsx --watch src/index.ts",
+		"dev": "tsx --env-file=.env --watch src/index.ts",
 		"build": "esbuild ./src/index.ts --platform=node --bundle --outfile=./build/index.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
